cleanup old code and switch to npx

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,33 +30,7 @@ stages:
               CI: true
           - task: CmdLine@2
             inputs:
-              script: yarn chromatic --project-token=${CHROMATIC_PROJECT_TOKEN}
+              script: npx chromatic --project-token=${CHROMATIC_PROJECT_TOKEN}
               failOnStderr: true
             env:
               CHROMATIC_PROJECT_TOKEN: $(CHROMATIC_PROJECT_TOKEN)
-  # - stage: Test
-  #   displayName: Chromatic Testing
-  #   # Job list
-  #   jobs:
-  #     - job: Chromatic_Deploy
-  #       displayName: Install packages and publishes to Chromatic
-  #       variables:
-  #         # Sets scoped environment variable to cache packages
-  #         npm_config_cache: $(Pipeline.Workspace)/.npm
-  #       # List of steps
-  #       steps:
-  #         # 👇 Installs and configures Node environment
-  #         - task: NodeTool@0
-  #           inputs:
-  #             versionSpec: "12.x"
-  #           displayName: "Install Node.js"
-  #         - task: Cache@2
-  #           displayName: Install and cache packages
-  #           inputs:
-  #             key: 'npm | "$(Agent.OS)" | package-lock.json'
-  #             restoreKeys: |
-  #               npm | "$(Agent.OS)"
-  #             path: $(npm_config_cache)
-  #         - script: npm ci
-  #           condition: ne(variables.CACHE_RESTORED, 'true')
-  #           # 👇 Adds Chromatic as a step
